Add new message and create message events

--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <p>Welcome to chat app</p>
 
-        <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
+<head>
+    <meta charset="utf-8">
+</head>
 
-            socket.on('connect', () => {
-                console.log('Connected to server');
-                
-            });
+<body>
+    <p>Welcome to chat app</p>
 
-            socket.on('disconnect', () => {
-                console.log('Disconnected from server');
-            });
-        </script>
-    </body>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/index.js"></script>
+</body>
+
 </html>
