--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,14 @@
 <body>
     <p id="p1">Welcome to chat app</p>
 
+    <ol id="messages"></ol>
+
+    <form id="message-form" action="">
+        <input type="text" name="message" placeholder="Message">
+        <button>Send</button>
+    </form>
     <script src="/socket.io/socket.io.js"></script>
+    <script src="./js//libs/jquery-3.3.1.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
