--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta charset=urf-8>
-    <title>Jpoin | ChatApp</title>
+    <title>Join | ChatApp</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
